<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Solana Mobile Inc.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/label_active_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/label_active_account"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/text_active_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:ellipsize="middle"
            android:gravity="center"
            android:padding="4dp"
            android:singleLine="true"
            tools:text="HAgk14JpMQLgt6rVgv7cBQFJWFto5Dqxi472uT3DKpqk" />

        <Button
            android:id="@+id/button_start_remote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_start_remote_connection" />

        <TextView
            android:id="@+id/label_seed_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/label_seed_section"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <LinearLayout
            android:id="@+id/group_no_seed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_generate_seed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/label_generate_seed" />

            <Button
                android:id="@+id/button_import_seed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_import_seed" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_seed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/text_mnemonic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="4dp"
                android:typeface="monospace"
                tools:text="@string/str_seed_phrase_hidden" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_account" />

                <Button
                    android:id="@+id/button_account_prev"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:minWidth="48dp"
                    android:text="@string/label_account_prev" />

                <TextView
                    android:id="@+id/text_account_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    tools:text="0" />

                <Button
                    android:id="@+id/button_account_next"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:text="@string/label_account_next" />
            </LinearLayout>

            <Button
                android:id="@+id/button_clear_seed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_clear_seed" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
