<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Solana Mobile Inc.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_payloads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signpayload.SignPayloadFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_sign_payloads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        android:textAllCaps="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_num_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_sign_payloads"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_num_txns"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_num_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/label_num_transactions"
        app:layout_constraintBottom_toBottomOf="@id/label_num_transactions"
        app:layout_constraintStart_toEndOf="@id/label_num_transactions"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_num_transactions"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_account"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/label_account"
        app:layout_constraintBottom_toBottomOf="@id/label_account"
        app:layout_constraintStart_toEndOf="@id/label_account"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_authorize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_account"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_authorize"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_account"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_decline"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_simulate_authorization_failed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_authorize"
        android:text="@string/label_simulate_authorization_failed"
        android:textSize="22sp"
        android:minLines="2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_simulate_invalid_payloads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_simulate_authorization_failed"
        android:text="@string/label_simulate_invalid_payloads"
        android:textSize="22sp"
        android:minLines="2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_simulate_too_many_payloads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_simulate_invalid_payloads"
        android:text="@string/label_simulate_too_many_payloads"
        android:textSize="22sp"
        android:minLines="2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_simulate_internal_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_simulate_too_many_payloads"
        android:text="@string/label_simulate_internal_error"
        android:textSize="22sp"
        android:minLines="2" />

</androidx.constraintlayout.widget.ConstraintLayout>
