<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Solana Mobile Inc.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authorize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorizedapp.AuthorizeDappFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_authorize_dapp"
        android:textSize="24sp"
        android:textAllCaps="true"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_title"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@android:drawable/ic_menu_report_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/image_icon"
        app:layout_constraintBottom_toBottomOf="@id/image_icon"
        app:layout_constraintStart_toEndOf="@id/image_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/image_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_cluster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_uri"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_cluster"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_cluster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/label_cluster"
        app:layout_constraintBottom_toBottomOf="@id/label_cluster"
        app:layout_constraintStart_toEndOf="@id/label_cluster"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_verification_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_cluster"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_verification_state"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_verification_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toTopOf="@id/label_verification_state"
        app:layout_constraintBottom_toBottomOf="@id/label_verification_state"
        app:layout_constraintStart_toEndOf="@id/label_verification_state"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_verification_scope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_verification_state"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_verification_scope"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_verification_scope"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toTopOf="@id/label_verification_scope"
        app:layout_constraintBottom_toBottomOf="@id/label_verification_scope"
        app:layout_constraintStart_toEndOf="@id/label_verification_scope"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_authorize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_verification_scope"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/label_authorize"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_verification_scope"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/label_decline"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_authorize_x3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_authorize"
        android:text="@string/label_authorize_x3"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_simulate_cluster_not_supported"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_authorize_x3"
        android:text="@string/label_simulate_cluster_not_supported"
        android:textSize="22sp"
        android:minLines="2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_simulate_internal_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_simulate_cluster_not_supported"
        android:text="@string/label_simulate_internal_error"
        android:textSize="22sp"
        android:minLines="2" />

</androidx.constraintlayout.widget.ConstraintLayout>
